# aq-latam-take-home

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INSTRUCTIONS.md  api_client.py  docker-compose.yml  fly.toml  main.py  pyproject.toml
backend/: __init__.py  main.py
backend/api/: routes.py  schemas.py
backend/database/: __init__.py  db.py  models.py  session_repository.py
backend/models/: __init__.py  interview.py
backend/services/: __init__.py  dspy_signature.py  evaluation_service.py  interview_service.py  protocols.py  question_generator.py  transcription_service.py
data/: jobs.json
docs/: OVERVIEW.md  PRODUCT_BRIEF.md
docs/diagrams/: DIAGRAM_TRANSCRIPTION_RETRY_FLOW.md
docs/features/: 0001_PLAN.md
docs/roadmaps/: 0001_ROADMAP.md
frontend/: __init__.py
frontend/components/: answer_input.py  audio_recorder.py  conversation_history.py  question_display.py
models/: job.py
scripts/: init_db.sh  start.sh  test_container.sh
tests/: test_answer_submission.py  test_api_client.py  test_api_client_config.py  test_api_routes.py  test_audio_recorder_component.py  test_backend_config.py  test_database.py  test_dependency_injection.py  test_interview_results_page.py  test_interview_room.py  test_interview_room_page.py  test_interview_service.py  test_interview_state.py  test_job_listing.py  test_job_listing_page.py  test_main.py  test_navigation.py  test_navigation_state.py  test_question_display_component.py  test_question_generator.py  test_router.py  test_start_script.py  test_transcription_service.py
(+30 files in other folders)
