[project]
name = "aq-latam-take-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=3.0.4",
    "fastapi>=0.127.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "streamlit>=1.52.2",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
